fixed double scrollbar

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -105,6 +105,7 @@
 
 html, body {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
